# TRIPS

./: CMakeLists.txt  CMakePresets.json  install_dependencies.ps1
include/: e57_loader.hpp  image_pyramid.hpp  leica_loader.hpp  neural_network.hpp  point.hpp  point_cloud.hpp  renderer.hpp  shader.hpp  trips_streaming_renderer.hpp
src/: e57_loader.cpp  image_pyramid.cpp  leica_loader.cpp  main.cpp  neural_network.cpp  point.cpp  point_cloud.cpp  renderer.cpp  shader.cpp
